# ncopds

./: .gitignore  Cargo.toml  README.md
src/: config.rs  connection.rs  controller.rs  main.rs  model.rs  server.rs  utils.rs
src/ui/: canvas.rs  dialogs.rs  directory_view.rs  mod.rs  serverinfomodal.rs  side_panel.rs  uiroot.rs
