[package]
name = "ncopds"
description = "A TUI program for navigating OPDS catalogs."
version = "0.1.0"
edition = "2021"
keywords = ["ebook management", "ebooks", "opds"]
categories = ["command-line-utilities"]
license-file="LICENSE"
readme = "README.md"
repository="https://github.com/rostyhn/ncopds"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.21.1", features = ["toml"] }
reqwest = { version="0.12.7" }
atom_syndication = "0.12.4"
structopt = { version="0.3.26", default-features = false }
bytes = {version = "1.2.1"}
toml = "0.5.9"
serde = "1.0.147"
serde_derive = "1.0.147"
opener = "0.7.1"
url = { version="2.5.2", features=["serde"]} 
async-trait = "0.1.80"
tokio = {version="1.38.0", features = ["full"] } 
termsize = "0.1.8"
image = "0.25.2"
chrono = "0.4.38"
keyring = {version="3.2.1", features=["linux-native"]}
infer = "0.16.0"
notify = "6.1.1"
rand = "0.8.5"
roxmltree = "0.20.0"
